--- a/ElevenNote.Web/ElevenNote.Web.csproj
+++ b/ElevenNote.Web/ElevenNote.Web.csproj
@@ -215,6 +215,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="Views\Notes\IsStarred.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -256,6 +257,7 @@
     <Content Include="Views\Notes\Edit.cshtml" />
     <Content Include="Views\Notes\Delete.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\Starred.cshtml" />
+    <Content Include="Views\Notes\IsNotStarred.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
