Added image to home page.

--- a/ElevenNote.Web/ElevenNote.Web.csproj
+++ b/ElevenNote.Web/ElevenNote.Web.csproj
@@ -201,6 +201,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\ElevenNote1.gif" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Properties\PublishProfiles\davemaz-elevennote - Web Deploy.pubxml" />
